fix suggestbox in modal dropdown is not visible

--- a/src/main/java/org/dominokit/domino/ui/public/css/dropdown/dropdown.css
+++ b/src/main/java/org/dominokit/domino/ui/public/css/dropdown/dropdown.css
@@ -82,7 +82,6 @@
 /* Dropdown Menu =============================== */
 .dropdown {
     position: absolute;
-    z-index: 11;
     background-color: #fff;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
